2010-02-17  Marcus Bulach  <bulach@chromium.org>

        Reviewed by Jeremy Orlow.

        Implements GeolocationServices for Chromium.
        https://bugs.webkit.org/show_bug.cgi?id=32068

        This is part of implementing Geolocation framework for Chromium. Existing layout tests should pass.

        * WebCore.gypi:
        * page/Geolocation.h:
        * platform/GeolocationService.h:

2010-02-17  Steve Block  <steveblock@google.com>

        Reviewed by Ariya Hidayat.

        Adds missing platform and feature guards to V8 bindings
        https://bugs.webkit.org/show_bug.cgi?id=34987

        No new tests, build fix only.

        * bindings/v8/V8Proxy.cpp: Modified. Adds CHROMIUM guards and uses PlatformBridge in place of ChromiumBridge
        * bindings/v8/V8Proxy.h: Modified. Adds CHROMIUM guards and uses PlatformBridge in place of ChromiumBridge
        * bindings/v8/custom/V8DocumentCustom.cpp: Modified. Adds XPATH guards

2010-02-17  Steve Block  <steveblock@google.com>

        Reviewed by Ariya Hidayat.

        Include WebCore's npruntime.h for Android in V8 bindings
        https://bugs.webkit.org/show_bug.cgi?id=35002

        Currently, the V8 bindings include bindings/npruntime.h, which is a
        Chromium-specific file outside of the WebKit tree.

        No new tests, build fix only.

        * bindings/v8/NPV8Object.cpp:
        * bindings/v8/NPV8Object.h:
        * bindings/v8/V8NPObject.h:
        * bindings/v8/V8NPUtils.h:
        * bindings/v8/npruntime_impl.h:
        * bindings/v8/npruntime_priv.h:

2010-01-07  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GStreamer] Should handle BUFFERING messages
        https://bugs.webkit.org/show_bug.cgi?id=30004

        Initial support for on-disk buffering of videos. This works only
        for Quicktime and flv though.

        * css/mediaControlsGtk.css:
        * platform/gtk/RenderThemeGtk.cpp: